--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
@@ -63,8 +63,8 @@
             </div>
             
             <div id="socials_container">
-                <img src="imgs/linkedin.png" alt="linkedin" class="icon" onclick="location.href='https:/linkedin.com'">
-                <img src="imgs/github.png" alt="github" class="icon" onclick="location.href='https:/github.com'">
+                <a href="https://www.linkedin.com/in/yash-goyal-313092281/"><img src="imgs/linkedin.png" alt="linkedin" class="icon"></a>
+                <a href= "https://github.com/yash-writes-code"><img src="imgs/github.png" alt="github" class="icon"></a>
             
             </div>
         </div>
@@ -245,7 +245,7 @@
             <div class="nav-links-container">
                 <ul class="nav-links">
                     <li><a href="#about" onclick="toggle()">About</a></li>
-                    <li><a href="#skills" onclick="toggle()">Skills</a></li>
+                    <li><a href="#experience" onclick="toggle()">Experience</a></li>
                     <li><a href="#projects" onclick="toggle()">Projects</a></li>
                     <li><a href="#projects" onclick="toggle()">Contact</a></li>
                </ul>
@@ -253,6 +253,7 @@
         </nav>
         <p>Copyright &#169; 2024 Yash Goyal. All Rights Reserved</p>
     </footer>
+
 </body>
 <script src="script.js"></script>
 </html>
